# Emotion-Classification

./: .gitignore  BLANK_README.md  Dockerfile  README.md  Vlad_Bert.ipynb  kaggle_predicted.csv  lstm_model.ipynb  pyproject.toml  remove_constrains.py  requirements.txt
.github/workflow/: env_setup.yml
.github/workflows/: setup.yml
BERT_classification/notebooks/: bert_classification.ipynb
BERT_classification/scripts/: bert_model.py
Llama2 classification/: llama2_classification.ipynb
Llama2 classification/scripts/: llama_model.py
Llama2 classification/submissions/: roberta_balanced_data.csv  roberta_test.csv
NN_simple_classification/: dl_emotion_detection.ipynb  model_config.yaml
NN_simple_classification/.ipynb_checkpoints/: dl_emotion_detection-checkpoint.ipynb  ml_emotion_detection-checkpoint.ipynb
NN_simple_classification/data/: y_true.csv
NN_simple_classification/scripts/: model_configs.py  preprocessor.py
Preprocessing_Wesley/Scripts/: CARER.py  ChatGPT.py  Survivor.py  affective_text.py  config.py  daily_dialog.py  data_process.ipynb  emotion_detection_master.py  fairy_tails.py  freq.csv  generate_data_local.ipynb  goemotions.py  main.ipynb  (+1 more)
RoBERTa_classification/: Error_analysis.ipynb  explanation.html  explanation2.html  explanation_actual_sad.html  explanation_actual_sadness.html
notebooks/: bert_classification.ipynb  error_analysis.ipynb  ml_emotion_detection.ipynb  roberta_classification.ipynb  simple_nn_classification.ipynb
pipeline/: main.py  predicting.py  preprocessing.py
src/: config_train.py  ml_functions.py  preprocessor.py
(+73 files in other folders)
