[tool.poetry]
name = "emotion classification"
version = "0.1.0"
description = ""
authors = ["SimonaDimitrova222667 <112696594+SimonaDimitrova222667@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
