[tool.poetry]
name = "emotion classification"
version = "0.1.0"
description = ""
authors = ["SimonaDimitrova222667 <112696594+SimonaDimitrova222667@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7.5"
transformers = "^4.41.2"
huggingface-hub = "^0.23.3"
typer = "^0.12.3"
torch = "^2.2.0"
scikit-learn = "^1.5.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
